# CachiBot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  _test_async_extract.py  alembic.ini  cachibot-server.spec  cachibot.example.toml  dev.ps1  dev.sh  docker-compose.yml  pyproject.toml
.claude/skills/: create-pr.md  styles.md
.claude/skills/cachibot-api-route/: SKILL.md
.claude/skills/cachibot-full-stack-entity/: SKILL.md
.claude/skills/cachibot-websocket-event/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/lint-fix/: SKILL.md
.claude/skills/review-fix/: SKILL.md
.github/workflows/: ci.yml  desktop-release.yml  dev.yml  publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-model-switching/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-bot-marketplace/: 02-01-PLAN.md  02-RESEARCH.md
cachibot/: __init__.py  agent.py  cli.py  config.py  db_commands.py  logging_config.py
cachibot/api/: __init__.py  auth.py  helpers.py  room_websocket.py  server.py  voice_websocket.py  websocket.py
cachibot/api/routes/: __init__.py  admin_executions.py  assets.py  auth.py  bot_env.py  bots.py  chat.py  chats.py  coding_agents.py  commands.py  config.py  connections.py  contacts.py  creation.py  custom_instructions.py  developer.py  documents.py  executions.py  external_plugins.py  groups.py  knowledge.py  marketplace.py  mobile_pair.py  models.py  openai_compat.py  plugins.py  providers.py  room_tasks.py  rooms.py  scripts.py  setup.py  skills.py  telemetry.py  update.py  work.py
cachibot/data/: marketplace_templates.py  room_marketplace_templates.py
cachibot/models/: __init__.py  artifact.py  asset.py  automations.py  bot.py  capabilities.py  chat.py  coding_agents.py  command.py  config.py  connection.py  external_plugin.py  instruction.py  job.py  knowledge.py  room.py  room_task.py  room_websocket.py  voice.py  websocket.py  work.py  workspace.py
cachibot/plugins/: __init__.py  audio_generation.py  base.py  coding_agent.py  file_ops.py  image_generation.py  instruction_management.py  job_tools.py  knowledge.py  notes.py  platform.py  python_sandbox.py  sdk.py  sdk_types.py  task.py  website_builder.py  work_management.py  workspace_progress.py
cachibot/services/: agent_factory.py  auth_service.py  bot_creation_service.py  bot_environment.py  coding_agent_dispatcher.py  command_processor.py  command_registry.py  document_processor.py  driver_factory.py  encryption.py  external_plugins.py  job_runner.py  message_processor.py  model_resolver.py  name_generator.py  ntfy.py  platform_manager.py  plugin_manager.py  room_automation_service.py  room_orchestrator.py  scheduler_service.py  script_sandbox.py  secret_masking.py  terms_checker.py  vector_store.py  webhook_delivery.py
cachibot/services/adapters/: base.py  discord.py  line.py  registry.py  teams.py  telegram.py  viber.py
cachibot/storage/: MIGRATION_REPORT.md  asset_repository.py  automations_repository.py  base.py  db.py  developer_repository.py  group_repository.py  repository.py  room_repository.py  room_task_event_repository.py  room_task_repository.py  user_repository.py  work_repository.py
cachibot/storage/models/: __init__.py  asset.py  bot.py  contact.py  developer.py  env_var.py  group.py  knowledge.py  platform_config.py  room.py  room_task.py  room_task_event.py
cachibot/telemetry/: __init__.py  collector.py  sender.py
desktop/: main.js  notarize.js  package-lock.json  package.json  preload.js  pyinstaller-cli.py  pyinstaller-server.py  splash.html
docs/: README.es.md  README.pt.md  README.zh-CN.md  architecture.md
docs/architecture/: design-system.md  per-bot-environment.md  room-chat-parity.md  rooms_ideas.md  unified-automations.md
docs/build-pipeline/: PLAN.md  ci-cd-review.md  distribution-strategy.md  electron-config.md  python-packaging.md  update-system.md  version-system.md
docs/features/: rooms.md
docs/plugins/: README.md  artifacts.md  examples.md  lifecycle.md  manifest.md  skills.md  views.md
examples/plugins/code_canvas/: __init__.py  code_canvas.py  plugin.toml
examples/plugins/doc_writer/: __init__.py  doc_writer.py  plugin.toml
examples/plugins/hello_world/: __init__.py  hello_world.py  plugin.toml
examples/plugins/html_preview/: __init__.py  html_preview.py  plugin.toml
examples/plugins/website_builder/: __init__.py  plugin.toml  website_builder.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: assets.ts  auth.ts  automations.ts  base-websocket.ts  bot-env.ts  client.ts  commands.ts  connections.ts  contacts.ts  developer.ts  execution-log.ts  external-plugins.ts  groups.ts  index.ts  knowledge.ts  models.ts  platform-tools.ts  plugins.ts  providers.ts  room-tasks.ts  room-websocket.ts  rooms.ts  (+4 more)
mobile/: README.md  pubspec.yaml
mobile/android/: build.gradle.kts
mobile/lib/: main.dart
mobile/test/: widget_test.dart
scripts/: dev-desktop.sh  init_pgvector.sql  init_test_db.sh  migrate_sqlite_to_postgres.py  ruff-watch.sh
skills/cachibot-api-route/: SKILL.md
skills/cachibot-frontend-view/: SKILL.md
skills/cachibot-full-stack-entity/: SKILL.md
skills/cachibot-plugin/: SKILL.md
skills/cachibot-websocket-event/: SKILL.md
src/cachibot/: __init__.py  agent.py  cli.py  config.py  db_commands.py
ssl/: CachiBot.certSigningRequest  developerID_application.cer
tests/: __init__.py  conftest.py  test_auth_api.py  test_bot_env_api.py  test_bot_environment.py  test_cachibot.py  test_chat_api.py  test_custom_instructions_api.py  test_driver_factory.py  test_encryption.py  test_kb_pipeline.py  test_media_extraction.py  test_pdf_extraction.py  test_per_bot_integration.py  test_scheduler.py  test_security.py
(+465 files in other folders)
