[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cachibot"
version = "0.2.0"
description = "The Armored AI Agent. Cross-platform, secure, yours."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Juan Denis", email = "juan@vene.co" }
]
keywords = [
    "ai",
    "agent",
    "llm",
    "automation",
    "python",
    "sandbox",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "prompture>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    # API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "pydantic[email]>=2.9.0",
    "websockets>=14.0",
    # Knowledge base (Phase 2)
    "sqlite-vec>=0.1.3",
    "fastembed>=0.4.0",
    "pymupdf>=1.26.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.9",
    # Platform integrations
    "aiogram>=3.0.0",
    "discord.py>=2.0.0",
    # Authentication
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
cachibot = "cachibot.cli:app"
cachi = "cachibot.cli:app"

[project.urls]
Homepage = "https://cachibot.dev"
Documentation = "https://cachibot.dev/docs"
Repository = "https://github.com/jhd3197/cachibot"
Issues = "https://github.com/jhd3197/cachibot/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cachibot"]

[tool.hatch.build.targets.wheel.force-include]
"frontend/dist" = "cachibot/frontend_dist"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
