[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cachibot"
dynamic = ["version"]
description = "The Armored AI Agent. Cross-platform, secure, yours."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Juan Denis", email = "juan@vene.co" }
]
keywords = [
    "ai",
    "agent",
    "llm",
    "automation",
    "python",
    "sandbox",
    "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "prompture>=1.0.31",
    "tukuy>=0.0.30",
    "typer>=0.12.0",
    "rich>=13.0.0",
    # API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "pydantic[email]>=2.9.0",
    "websockets>=14.0",
    # Knowledge base (Phase 2)
    "fastembed>=0.4.0",
    "pymupdf>=1.26.0",
    "python-docx>=1.1.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.9",
    # Scheduling
    "croniter>=2.0.0",
    # Platform integrations
    "aiogram>=3.0.0",
    "discord.py>=2.0.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",
    "botbuilder-core>=4.14.0",
    "botbuilder-integration-aiohttp>=4.14.0",
    "aiohttp>=3.9.0",
    # Authentication
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    # Encryption
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
]

[project.scripts]
cachibot = "cachibot.cli:app"
cachi = "cachibot.cli:app"

[project.urls]
Homepage = "https://cachibot.ai"
Documentation = "https://cachibot.ai/docs"
Repository = "https://github.com/jhd3197/cachibot"
Issues = "https://github.com/jhd3197/cachibot/issues"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.sdist.force-include]
"frontend/dist" = "frontend/dist"

[tool.hatch.build.targets.wheel]
packages = ["src/cachibot"]

[tool.hatch.build.targets.wheel.force-include]
"frontend/dist" = "cachibot/frontend_dist"
"VERSION" = "cachibot/VERSION"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N815"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = [
    "tukuy.*",
    "botbuilder.*",
    "pgvector.*",
    "pymupdf",
    "prompture.model_rates",
    "prompture.skills",
    "tomllib",
    "croniter",
    "yaml",
    "aiofiles",
]
ignore_missing_imports = true

[tool.bandit]
targets = ["src/cachibot"]
exclude_dirs = ["tests"]
# B110  try_except_pass — intentional graceful degradation
# B112  try_except_continue — intentional skip-on-error loops
# B105  hardcoded_password_string — false positives (docker dev defaults, token_type)
# B106  hardcoded_password_funcarg — false positives on token_type="access"
# B107  hardcoded_password_default — false positives on token_type defaults
# B404  import_subprocess — CLI tool legitimately uses subprocess
# B603  subprocess_without_shell — safe usage with literal args
# B607  start_process_with_partial_path — calling docker/system tools by name
# B608  hardcoded_sql_expressions — internal migration CLI, no user input
# B104  hardcoded_bind_all_interfaces — intentional for server adapters
skips = ["B110", "B112", "B105", "B106", "B107", "B404", "B603", "B607", "B608", "B104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
